# xdbc-spark

./: Dockerfile  Makefile  README.md  build.sbt  run_jdbc_spark.sh  run_xdbc_spark.sh
project/: plugins.sbt
src/main/scala/example/: ReadPGJDBC.scala  ReadPGXDBC.scala  SchemaConverter.scala  Schemata.scala  SchemataOld.scala  Test.scala
src/main/scala/xdbc/: TestXClient.scala  XClient.scala  XDBCReader.scala  XDBCRuntimeEnv.scala  XDBCScan.scala  XDBCScanBuilder.scala  XDBCTable.scala
src/main/scala/xdbcj/: PGReader.scala  PGScan.scala  PGScanBuilder.scala  PGTable.scala
src/native/: CMakeLists.txt  library.cpp  library.test
src/native/include/: xdbc_XClient.h
